--- a/templates/topnavfixed/style.css
+++ b/templates/topnavfixed/style.css
@@ -94,9 +94,12 @@ nav li {
   transition: background 1s;
 }
 
+nav ul:hover {
+  cursor: context-menu;
+}
+
 nav li:hover {
   background: #057287;
-  cursor: default;
 }
 
 #homeLink {
@@ -109,12 +112,12 @@ nav li:hover {
   background: #222;
 }
 
-.dropdown-content {
+#dropdownContent {
     display: none;
     z-index: 100;
 }
 
-.dropdown:hover .dropdown-content {
+#dropdown:hover #dropdownContent {
     display: block;
 }
 
@@ -125,7 +128,7 @@ nav li:hover {
     display: none;
   }
 
-  .dropdown-content {
+  #dropdownContent {
     display: block;
   }
 
